tests/compile/activation_param_field_name_mismatch.stderr
warning: use of deprecated struct `plexus_core::ChildCapabilities`: Use MethodRole::DynamicChild { list_method, search_method } instead. Removed in 0.7.
  --> tests/compile/activation_param_field_name_mismatch.rs:16:1
   |
16 | #[plexus_macros::activation(namespace = "test", version = "1.0.0", request = TestRequest, crate_path = "plexus_core")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default
   = note: this warning originates in the attribute macro `plexus_macros::activation` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0609]: no field `nonexistent` on type `TestRequest`
  --> tests/compile/activation_param_field_name_mismatch.rs:21:29
   |
21 |         #[activation_param] nonexistent: String,
   |                             ^^^^^^^^^^^ unknown field
   |
   = note: available field is: `auth_token`

warning: unused variable: `nonexistent`
  --> tests/compile/activation_param_field_name_mismatch.rs:21:29
   |
21 |         #[activation_param] nonexistent: String,
   |                             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_nonexistent`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
